--- a/index.css
+++ b/index.css
@@ -1,5 +1,16 @@
+/* Base reset */
+* {
+    margin: 0;
+    padding: 0;
+}
+
 html {
     box-sizing: border-box;
+     /* Set font size for easy rem calculations
+   * default document font size = 16px, 1rem = 16px, 100% = 16px
+   * (100% / 16px) * 10 = 62.5%, 1rem = 10px, 62.5% = 10px
+  */
+    font-size: 62.5%;
     scroll-behavior: smooth;
 }
 
@@ -7,26 +18,44 @@ body {
     margin: 0;
 }
 
-nav {
+#navbar {
     display: flex;
     justify-content: flex-end;
     background-color: red;
+    box-shadow: 0 2px 0 rgba(0, 0, 0, 0.4);
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 10;
 }
 
 .nav-list a:hover {
-    background: blue;
+    background: rgb(113, 113, 148);
 }
 
 .nav-list {
     display: flex;
+    list-style-type: none;
+    margin-right: 2rem;
 }
 
-li{
-    list-style-type: none;
-}
+.nav-list a {
+    display: block;
+    font-size: 2.2rem;
+    padding: 2rem;
+  }
 
 #welcome-section {
-    background-color: grey;
+    color: #fff;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100vh;
+    background-image: linear-gradient(62deg, #3a3d40 0%, #181719 100%);
+    font-size: x-large;
 }
 
 .projects-section {
@@ -50,17 +79,17 @@ li{
       color: #f0f0f0;
   }
 
-  /*.project {
-    background: #ccc;
-    box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
-    border-radius: 2px;
-  }*/
-
-  /*.project-image {
-    height: calc(100% - 6.8rem);
+ .contact-section {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
     width: 100%;
-    object-fit: cover;
-  }*/
+    height: 80vh;
+    padding: 0 2rem;
+    background: #303841;
+  }
 
   .contact-links {
     display: flex;
@@ -76,3 +105,38 @@ li{
     text-shadow: 2px 2px 1px #1f1f1f;
     transition: transform 0.3s ease-out;
   }
+
+  .contact-details:hover {
+    transform: translateY(8px);
+  }
+
+  .btn {
+    display: inline-block;
+    padding: 1rem 2rem;
+    border-radius: 2px;
+  }
+
+  @media (max-width: 28.75em) {
+    .contact-links {
+      flex-direction: column;
+      text-align: center;
+    }
+  }
+
+  @media screen and (max-width: 30em) {
+      #welcome-section {
+          background-image: linear-gradient(270deg, #a84f3c 0%, #9df57a 100%);
+  }
+}
+
+   /*.project {
+    background: #ccc;
+    box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
+    border-radius: 2px;
+  }*/
+
+  /*.project-image {
+    height: calc(100% - 6.8rem);
+    width: 100%;
+    object-fit: cover;
+  }*/
