--- a/index.css
+++ b/index.css
@@ -16,6 +16,7 @@ html {
 
 body {
     margin: 0;
+    color: white;;
 }
 
 #navbar {
@@ -64,6 +65,12 @@ body {
     background: #45567d;
 }
 
+.projects-section-header {
+    max-width: 640px;
+    margin: 0 auto 6rem auto;
+    border-bottom: 0.2rem solid white;
+  }
+
 .projects-grid {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
@@ -73,6 +80,10 @@ body {
     margin: 0 auto;
     margin-bottom: 6rem;
   }
+
+  h2 {
+      font-size: 4.2rem;
+  }  
 
   a {
       text-decoration: none;
@@ -89,6 +100,10 @@ body {
     height: 80vh;
     padding: 0 2rem;
     background: #303841;
+  }
+
+  .contact-section-header > h2 {
+    font-size: 6rem;
   }
 
   .contact-links {
