--- a/index.css
+++ b/index.css
@@ -82,6 +82,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    flex-wrap: wrap;
   }
 
   .project-title {
