--- a/index.css
+++ b/index.css
@@ -22,7 +22,7 @@ body {
 #navbar {
     display: flex;
     justify-content: flex-end;
-    background-color: red;
+    background-color: teal;
     box-shadow: 0 2px 0 rgba(0, 0, 0, 0.4);
     position: fixed;
     top: 0;
