--- a/star-wars-films/styles.css
+++ b/star-wars-films/styles.css
@@ -3,10 +3,14 @@
     box-sizing: border-box;
 }
 
+body {
+    background-color: black;
+}
 main {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    background-color: black;
 }
 
 figure {
@@ -14,6 +18,23 @@ figure {
 }
 
 figcaption {
-    background-color: cadetblue;
+    background-color: lightgrey;
     text-align: center;
+}
+
+.main_title {
+    display: flex;
+    justify-content: center;
+    background-color: black;
+}
+
+h1 {
+    color: white;
+}
+
+p {
+    color: white;
+    font-size: 1.5rem;
+    display: flex;
+    justify-content: center;
 }
