--- a/star-wars-characters/styles.css
+++ b/star-wars-characters/styles.css
@@ -5,6 +5,7 @@
 
 .body {
     background-color: black;
+    background-image: url(../Images/TheStars.jpg);
 }
 
 .mainHeader {
@@ -13,11 +14,16 @@
     margin: 2rem;
 }
 
+header {
+    font-size: 40px;
+}
+
 #main {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
     background-color: black;
+    background-image: url(../Images/TheStars.jpg);
 }
 
 figure {
@@ -34,7 +40,7 @@ header {
 }
 
 h1 {
-    color: white;
+    color: yellow;
 }
 
 p {
