--- a/pokemon/styles.css
+++ b/pokemon/styles.css
@@ -11,8 +11,29 @@
 
 .scene {
     width: 200px;
-    height: 260px;
+    height: 290px;
     border: 1px solid #CCC;
     margin: 20px;
     perspective: 600px;
+  }
+
+  .card {
+    width: 100%;
+    height: 100%;
+    transition: transform 1s;
+  transform-style: preserve-3d;
+    cursor: pointer;
+    position: relative;
+  }
+
+  .card__face {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    line-height: 260px;
+    color: white;
+    text-align: center;
+    font-weight: bold;
+    font-size: 40px;
+    backface-visibility: hidden;
   }
