--- a/pokemon/styles.css
+++ b/pokemon/styles.css
@@ -30,10 +30,19 @@
     position: absolute;
     width: 100%;
     height: 100%;
-    line-height: 260px;
-    color: white;
-    text-align: center;
-    font-weight: bold;
-    font-size: 40px;
     backface-visibility: hidden;
   }
+
+  .card__face--front {
+    background: lightblue;
+  }
+  
+  .card__face--back {
+    background: gray;
+    transform: rotateY(180deg);
+  }
+
+  .card.is-flipped {
+    transform: rotateY(180deg);
+  }
+  
