--- a/pokemon/styles.css
+++ b/pokemon/styles.css
@@ -3,6 +3,25 @@
     box-sizing: border-box;
 }
 
+body {
+  background-color: black;
+}
+
+header {
+  display: flex;
+  justify-content: center;
+}
+
+h1 {
+  font-family: sans-serif;
+  color: yellow;
+  display: flex;
+  justify-content: center;
+  font-weight: bold;
+  font-size: 70px;
+  text-transform: uppercase;
+}
+
 .pokemonGrid {
     display: flex;
     flex-wrap: wrap;
@@ -31,6 +50,10 @@
     width: 100%;
     height: 100%;
     backface-visibility: hidden;
+    line-height: 260px;
+    text-align: center;
+    font-weight: bold;
+    font-size: 18px;
   }
 
   .card__face--front {
