--- a/pokemon/styles.css
+++ b/pokemon/styles.css
@@ -23,6 +23,13 @@ h1 {
   margin: 0px 0px 25px 0px;
 }
 
+button {
+  color: yellow;
+  background-color: black;
+  border-color: blue;
+  font: bold;
+}
+
 .pokemonGrid {
     display: flex;
     flex-wrap: wrap;
