--- a/pokemon/styles.css
+++ b/pokemon/styles.css
@@ -25,6 +25,12 @@ h1 {
   margin: 0px 0px 25px 0px; 
 }
 
+#newPokemon {
+  padding: 4px;
+  text-transform: uppercase;
+  font-size: 15px;
+}
+
 button {
   color: yellow;
   background-color: black;
@@ -32,6 +38,7 @@ button {
   font: bold;
   position: relative;
   bottom: 20px;
+  border-radius: 5px;
 }
 
 .pokemonGrid {
@@ -98,7 +105,7 @@ button {
   footer {
     display: flex;
     justify-content: center;
-    color: white;
+    color: yellow;
   }
 
   
