changed font and style

--- a/index.css
+++ b/index.css
@@ -39,6 +39,7 @@ body {
     display: flex;
     list-style-type: none;
     margin-right: 2rem;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 .nav-list a {
@@ -115,13 +116,19 @@ body {
     border-radius: 25px;
   }
 
+  h1{
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  }
+
   h2 {
-      font-size: 4.2rem;
+      font-size: 4rem;
       color: black;
+      font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   }  
 
   h3 {
     font-size: 6.2rem;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   }
 
   a {
@@ -132,6 +139,8 @@ body {
   p {
     font-size: 2rem;
     color: white;
+    font: bold;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   }
 
  .contact-section {
@@ -161,6 +170,7 @@ body {
     max-width: 980px;
     margin-top: 4rem;
     flex-wrap: wrap;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   }
 
   .contact-details {
