--- a/pokemon/styles.css
+++ b/pokemon/styles.css
@@ -4,6 +4,7 @@
 }
 
 body {
+  background-image: url(/Images/PokemonField.jpg);
   background-color: black;
 }
 
@@ -25,14 +26,19 @@ h1 {
   margin: 0px 0px 25px 0px; 
 }
 
-h3 {
+h2{
   position: relative;
   top: 25px;
 }
 
+h3 {
+  position: relative;
+  top: 40px;
+}
+
 h5 {
   position: relative;
-  top: 25px;
+  top: 40px;
 }
 
 ul {
@@ -52,9 +58,10 @@ li {
 }
 
 #newPokemon {
-  padding: 4px;
   text-transform: uppercase;
   font-size: 15px;
+  cursor: pointer;
+  margin: 5px;
 }
 
 button {
@@ -114,6 +121,7 @@ button {
   }
 
   .card__face--front {
+    background-image: url("PokeField.jpg");
     background: #3279B9;
     border-radius: 25px;
   }
@@ -132,7 +140,7 @@ button {
   footer {
     display: flex;
     justify-content: center;
-    color: yellow;
+    color: black;
   }
 
   
