--- a/index.css
+++ b/index.css
@@ -56,12 +56,40 @@ body {
     align-items: center;
     width: 100%;
     height: 100vh;
-    background-image: linear-gradient(62deg, #3a3d40 0%, #181719 100%);
+    background-image: linear-gradient(10deg, #3a3d40 0%, #181719 100%);
     font-size: x-large;
 }
 
+.arrow {
+	width: 60px;
+	height: 82px;
+	position: absolute; 
+	left: 49%;
+	margin-left: 0px;
+	bottom: 5%;
+  z-index:999;
+}
+
+.arrow path {
+	stroke: teal;
+	stroke-width: 2px;
+	fill: transparent;	
+	animation: down 2s infinite;
+}
+
+@keyframes down{
+  0% { opacity:0 }
+  25% { opacity:1 }
+  75% { opacity:0 }
+  100% { opacity:0 }
+  }
+
+  .arrow path.a1{	animation-delay:-1s; }
+.arrow path.a2{	animation-delay:-.5s; }
+.arrow path.a3{	animation-delay:0s; }
+
 .container {
-  background-color: #111111;
+  /*background-color: #111111;*/
   display: flex;
   height: 100%;
   width: 100%;
