--- a/star-wars-films/styles.css
+++ b/star-wars-films/styles.css
@@ -22,13 +22,52 @@ header {
 }
 
 figure {
+    perspective: 50em; 
     margin: 1rem;
 }
+
+img {
+    width: 100%;
+    position: relative;
+    transition: transform 1.5s;
+    transform-style: preserve-3d;
+}
+
+.face {
+    width: 100%;
+    height: 100%;
+    
+
+    color: red;
+    line-height: 15em;
+    text-align: center;
+    position: absolute;
+
+    backface-visibility: hidden;
+}
+
+.back {
+    transform: rotateY(360deg);
+}
+
+figure:hover img {
+    transform: rotateY(360deg);
+    cursor: pointer;
+}
+
+/*figure:hover {
+    cursor: pointer;
+    transform: perspective(1000px) rotateX(20deg);
+}*/
 
 figcaption {
     color: white;
     background-color: black;
     text-align: center;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font: bold;
+    font-size: 20px;
+    text-transform: uppercase;
 }
 
 .main_title {
@@ -43,10 +82,12 @@ h1 {
 }
 
 p {
+    position: relative;
     color: white;
     font-size: 1.5rem;
     display: flex;
     justify-content: center;
     background-color: #101010;
     background-image: url(../Images/TheStars.jpg);
+    top: 25px;
 }
