--- a/starships/styles.css
+++ b/starships/styles.css
@@ -27,16 +27,26 @@ a {
 
 li {
     list-style-type: none;
+    color: white;
+    margin: 20px;
+}
+
+li:hover {
+    color: yellow;
 }
 
 h1 {
     color: yellow;
     font-size: 80px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    text-transform: uppercase;
+    font: bold;
 }
 
 h2 {
     display: flex;
     justify-content: center;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 .message {
