--- a/pokemon/styles.css
+++ b/pokemon/styles.css
@@ -41,12 +41,12 @@ h2{
 
 h3 {
   position: relative;
-  top: 40px;
+  top: 50px;
 }
 
 h5 {
   position: relative;
-  top: 40px;
+  top: 45px;
 }
 
 p {
@@ -61,6 +61,7 @@ ul {
   text-align: center;
   position: relative;
   top: 30px;
+  bottom: 10px;
   width:160px; 
   height: 80px;
 }
@@ -68,6 +69,7 @@ ul {
 li {
   position: relative;
   left: 5px;
+  top: 10px;
 }
 
 #newPokemon {
